<resources>
    <string name="app_name">Ecomerce-diplomado</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar</string>
    <string name="action_sign_in_short">Registrarse</string>
    <string name="welcome">"Bienvenido"</string>
    <string name="invalid_username">Usuario no valido</string>
    <string name="invalid_password">La contraseña debe tener más de 5 caracteres</string>
    <string name="login_failed">"Inicio de sesion fallido"</string>
    <string name="forgot">"Recuperar contraseña"</string>
    <string name="register">"Registro"</string>
    <string name="login_now">Iniciar</string>

    <string name="prompt_repeat_password">Confirmar Contraseña</string>
    <string name="prompt_name">Nombre</string>
    <string name="prompt_user">Usuario</string>
    <string name="prompt_contact">Contacto</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">ECommerceAPP</string>
    <string name="nav_header_subtitle">yucepi@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <string name="menu_category">Categoría</string>
    <string name="menu_product">Producto</string>
    <string name="menu_order">Ordenes</string>
    <string name="menu_order_tracking">Ordenes Tracking</string>
    <string name="menu_help">Ayuda</string>
    <string name="menu_profile">Perfil</string>
    <string name="menu_logout">Cerrar sesión</string>

    <string name="action_search">Buscar</string>
    <string name="action_notifications">Notificaciones</string>
    <string name="action_cart">Carrito</string>
    <string name="action_manager">Editar</string>
    <string name="action_delete">Eliminar</string>


    <string name="save">Guardar</string>
    <string name="back">Volver</string>
    <string name="please_wait">Por Favor Espere...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_item_code">Código Producto</string>
    <string name="prompt_item_name">Descripción</string>
    <string name="prompt_price">Precio</string>




</resources>
