<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/cardview_dark_background"
    tools:context=".ui.category.CategoryFragmentManager">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:scrollbarStyle="insideInset"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:gravity="center"
            android:theme="@style/AppTheme"
            android:orientation="vertical">

            <com.mikhaellopez.circularimageview.CircularImageView
                android:id="@+id/profile"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:src="@drawable/ic_person_default"
                app:civ_border_color="#3f51b5"
                app:civ_border_width="4dp"
                app:civ_shadow="true"
                app:civ_shadow_radius="10"
                app:civ_shadow_color="#3f51b5"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/nameCat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@color/darkWhite"
                    android:singleLine="true"/>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:id="@+id/manager"
                    android:text="@string/save"
                    style="@style/AppTheme.RoundedCornerMaterialButtonAdmin"
                    android:textSize="15sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="|"
                    style="@style/buttons"
                    android:textStyle="bold"
                    android:textSize="30dp"
                    android:gravity="center|bottom"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"/>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:id="@+id/back"
                    android:text="@string/back"
                    style="@style/AppTheme.RoundedCornerMaterialButtonAdmin"
                    android:textSize="15sp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>
    <include
        android:id="@+id/myProgressBar"
        android:visibility="invisible"
        layout="@layout/progress_bar"/>
</androidx.constraintlayout.widget.ConstraintLayout>